# dual_ur_inspire

./: Dockerfile  README.md  dual_arm_moveit.rviz  dual_ur_inspire.urdf  dual_ur_inspire_unmimic.urdf
Universal_Robots_ROS2_Description/: .pre-commit-config.yaml
arm_node/: CMakeLists.txt  package.xml
arm_node/include/: left_arm_node.hpp  right_arm_node.hpp
arm_node/src/: left_arm_node.cpp  right_arm_node.cpp
dual_arm_model/: CMakeLists.txt  package.xml
dual_arm_model/launch/: view.launch.py  view_xacro.launch.py
dual_arm_model/rviz/: view.rviz
dual_arm_model/urdf/: dual_arm_model.csv  inspire_hand_left.xacro  inspire_hand_right.xacro  real_bot.xacro  ur.ros2_control.xacro  ur.xacro  ur5e.ros2_control.xacro  ur5e.urdf.xacro  ur_mock.ros2_control.xacro
dual_arm_model/urdf/real_bot/: real_bot.usd
dual_arm_model/urdf/real_bot/configuration/: real_bot_physics.usd
dual_arm_model/urdf/real_bot_limited/: real_bot_limited.usd
dual_arm_model/urdf/real_bot_limited/configuration/: real_bot_limited_physics.usd  real_bot_limited_sensor.usd
dual_ur_inspire/configuration/: dual_ur_inspire_physics.usd
dual_ur_inspire_bringup/: CMakeLists.txt  package.xml
dual_ur_inspire_bringup/config/: params.yaml  real_params.yaml
dual_ur_inspire_bringup/config/ur5/: joint_limits.yaml
dual_ur_inspire_bringup/launch/: dual_ur_inspire_bringup.launch.py  dual_ur_inspire_bringup_sim.launch.py
dual_ur_inspire_bringup/rviz/: bot.rviz
dual_ur_inspire_bringup/urdf/: real_bot.urdf  real_bot_arm.urdf  real_bot_arm.xacro  real_bot_limited.urdf  real_bot_sim.xacro
dual_ur_inspire_description/: CMakeLists.txt  package.xml
dual_ur_inspire_description/cfg/: view_robot.rviz
dual_ur_inspire_description/config/: dual_arm_inspire_controller.yaml  inspire_hand_forward_pose_pub.yaml  view_dual_arm.rviz
dual_ur_inspire_description/launch/: dual_arm_control.launch.py  dual_arm_inspire_empty.sdf  dual_arm_moveitctrl.launch.py  dual_arm_upload.launch.py  test_forward_position_controller.launch.py  view_dual_arm.launch.py  view_dual_arm_control.launch.py  view_dual_ur5e.launch.py
dual_ur_inspire_description/urdf/: dual_ur_inspire.urdf  dual_ur_inspire.urdf.xacro  dual_ur_inspire_control.urdf.xacro  inspire_hand_gazebo.xacro  inspire_hand_left.ros2_control.xacro  inspire_hand_left.xacro  inspire_hand_right.ros2_control.xacro  inspire_hand_right.xacro  ur5e.urdf.xacro  ur5e_control.ros2_control.xacro  ur5e_control.urdf.xacro  ur5e_moveit.urdf.xacro  ur_control.gazebo.xacro
dual_ur_inspire_description/urdf/dual_ur_inspire/: dual_ur_inspire.usd
dual_ur_inspire_description/urdf/dual_ur_inspire/configuration/: dual_ur_inspire_physics.usd
dual_ur_inspire_description/world/: ur_dual_inspire_world.sdf
dual_ur_inspire_moveit/configuration/: dual_ur_inspire_moveit_physics.usd
dual_ur_inspire_moveit_config/: CMakeLists.txt  package.xml
dual_ur_inspire_moveit_config/config/: chomp_planning.yaml  dual_ur_inspire.srdf  dual_ur_inspire.urdf.xacro  dual_ur_inspire_control.srdf  dual_ur_inspire_moveit.srdf  dual_ur_inspire_moveit.urdf  dual_ur_inspire_moveit.urdf.xacro  joint_limits.yaml  kinematics.yaml  moveit_controllers.yaml  ompl_planning.yaml  simple_moveit_controllers.yaml
dual_ur_inspire_moveit_config/config/dual_ur_inspire_moveit/: dual_ur_inspire_moveit.usd
dual_ur_inspire_moveit_config/config/dual_ur_inspire_moveit/configuration/: dual_ur_inspire_moveit_physics.usd
dual_ur_inspire_unmimic/: dual_ur_inspire_unmimic.usd
finger_node/: CMakeLists.txt  package.xml
finger_node/include/: fingers_node.hpp
finger_node/src/: finger_node.cpp
inspire_hand_ros2/: README.md  README_TELEVISION_BRIDGE.md  TROUBLESHOOTING.md  cert.pem  create_ssl_certs.sh  key.pem  launch_inspire_hands.sh  run_television_bridge.sh  television_inspire_bridge_ultimate.py
inspire_hand_ros2/TeleVision/: requirements.txt  requirements_ubuntu22.txt
inspire_hand_ros2/TeleVision/teleop/: Preprocessor.py  TeleVision.py  constants_vuer.py  teleop_hand.py
inspire_hand_ros2/ins-dex-retarget/: hand_retarget.py
inspire_hand_ros2/inspire_hand_demo/launch/: inspire_hand_dual.launch.py
isaacsim_model/: dual_ur_arm_unmimic.usd
isaacsim_model/dual_ur_inspire_unmimic/configuration/: dual_ur_inspire_unmimic_physics.usd
joint_state_filter/: CMakeLists.txt  package.xml
joint_state_filter/src/: joint_state_filter.cpp
mimic_joint_controller/: package.xml  setup.cfg  setup.py
mimic_joint_controller/launch/: mimic.launch.py
mimic_joint_controller/mimic_joint_controller/: mimic_node.py
moveit_node/: CMakeLists.txt  package.xml
moveit_node/include/: dual_ur_inspire_node.hpp  left_arm_node.hpp  right_arm_node.hpp
moveit_node/src/: dual_ur_inspire_node.cpp  hands_node.cpp  left_arm_node.cpp  moveit_node.cpp  right_arm_node.cpp  tcp_server_node.cpp  test_ros2bridge.cpp
python_codes/: teleop_hand.py
rtde_pkg/: package.xml  setup.cfg  setup.py
rtde_pkg/rtde_pkg/: rtde_dual_receiver.py  rtde_left_controller.py  rtde_right_controller.py  test_rtde_node.py
ur_description/: CMakeLists.txt  package.xml
ur_description/launch/: load_dual_arm.launch.py  load_ur.launch.py  load_ur5e.launch.py  view_ur5e.launch.py
ur_description/urdf/: dual_ur5e.urdf.xacro
